login界面及字体修改

--- a/src/main/resources/html/login.html
+++ b/src/main/resources/html/login.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <!-- site metas -->
-    <title>CPPMS 登录</title>
+    <title>CGPMS 登录</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -84,26 +84,35 @@
     </div>
     <!-- end header inner -->
 </header>
-<section class="layout_padding">
+<div class="Marketing-bg">
     <div class="container">
-
         <div class="row">
+            <div class="col-md-12">
+                <div class="Marketingheading">
+                    <h3>登录</h3>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<section class="layout_padding">
+        <div class="container">
+            <div class="col-md-12">
+            <div class="row">
             <div class="col-md-12">
                 <div class="full comment_form">
                     <form action="./index.html">
                         <fieldset>
                             <div class="col-md-12">
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <input type="text" name="name" placeholder="Name" required="#" />
-                                        <input type="email" name="email" placeholder="Email" required="#" />
-                                        <input type="text" name="subject" placeholder="subject" required="#" />
-                                    </div>
-                                </div>
+                                <input type="text" name="name" placeholder="用户名" required="#" />
+                                <input type="password" name="password" placeholder="密码" required="#" />
+                                <a href="register.html" style="color: #79797a">还没有密码？点我注册</a>
+                            </div>
+                            <div class="col-md-12">
                                 <div class="row margin_top_30">
                                     <div class="col-md-12">
                                         <div class="center">
-                                            <button>Send</button>
+                                            <button>登录</button>
                                         </div>
                                     </div>
                                 </div>
