--- a/src/main/resources/html/index.html
+++ b/src/main/resources/html/index.html
@@ -143,7 +143,7 @@
                <div class="col-md-6">
                   <div class="full blog_cont">
                      <h4>我们的职责</h4>
-                     <p>“城市园林病虫害防治管理系统（CGPPM）”是为城市林业城市林业和园林管理局用于维护和管理园林业务而设计，其目的是为了通过互联网技术缩短此项业务的运营和管理成本，提升经济效益。另一方面，也为绿化业务管理人员提供快捷、方便的操作平台。
+                     <p>“城市园林病虫害防治管理系统（CGPMS）”是为城市林业城市林业和园林管理局用于维护和管理园林业务而设计，其目的是为了通过互联网技术缩短此项业务的运营和管理成本，提升经济效益。另一方面，也为绿化业务管理人员提供快捷、方便的操作平台。
                      </p>
                   </div>
                </div>
