--- a/src/main/resources/html/login.html
+++ b/src/main/resources/html/login.html
@@ -51,13 +51,32 @@
                                     <a href="index.html">首页</a>
                                 </li>
                                 <li>
-                                    <a href="event.html">灾情检索</a>
+                                    <div class="dropdown">
+                                        <button type="button" id="btn1" class="btn dropdown-toggle" data-toggle="dropdown">
+                                            灾情检索
+                                        </button>
+                                        <div class="dropdown-menu">
+                                            <a class="dropdown-item" style="color: black" href="#">虫害管理</a>
+                                            <a class="dropdown-item" style="color: black" href="#">病害管理</a>
+                                            <a class="dropdown-item" style="color: black" href="#">鼠害管理</a>
+                                        </div>
+                                    </div>
                                 </li>
                                 <li>
                                     <a href="chara.html">人员检索</a>
                                 </li>
                                 <li>
-                                    <a href="info.html">资料检索</a> <!--虫/鼠害...害信息查询-->
+                                    <!--虫/鼠害...害信息查询-->
+                                    <div class="dropdown">
+                                        <button type="button" id="btn2" class="btn dropdown-toggle" data-toggle="dropdown">
+                                            资料检索
+                                        </button>
+                                        <div class="dropdown-menu">
+                                            <a class="dropdown-item" style="color: black" href="#">虫害资料</a>
+                                            <a class="dropdown-item" style="color: black" href="#">病害资料</a>
+                                            <a class="dropdown-item" style="color: black" href="#">鼠害资料</a>
+                                        </div>
+                                    </div>
                                 </li>
                                 <!--登录后隐藏-->
                                 <li id="login" class="active">
@@ -116,5 +135,13 @@
         </div>
     </div>
 </form>
+<script src="js/jquery.min.js"></script>
+<script src="js/popper.min.js"></script>
+<script src="js/bootstrap.bundle.min.js"></script>
+<script src="js/jquery-3.0.0.min.js"></script>
+<script src="js/plugin.js"></script>
+<!-- Scrollbar Js Files -->
+<script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
+<script src="js/custom.js"></script>
 </body>
 </html>
