--- a/src/main/resources/html/medication.html
+++ b/src/main/resources/html/medication.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
 <head>
     <!-- basic -->
     <meta charset="utf-8">
@@ -107,7 +107,8 @@
     <!-- end header inner -->
 </header>
 
-<h1>hello world</h1>
+<h1>sasasda</h1>
+
 <div class="cpy">
     <div class="container">
         <div class="row">
