--- a/src/main/resources/html/register.html
+++ b/src/main/resources/html/register.html
@@ -67,7 +67,7 @@
                                     </div>
                                 </li>
                                 <li>
-                                    <a href="chara.html">人员检索</a>
+                                    <a href="chara.html">专家一览</a>
                                 </li>
                                 <li>
                                     <!--虫/鼠害...害信息查询-->
