--- a/src/main/resources/html/medication.html
+++ b/src/main/resources/html/medication.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
     <!-- basic -->
     <meta charset="utf-8">
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <!-- site metas -->
-    <title>【页面名称】 CGPMS</title>
+    <title>药剂管理 CGPMS</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -22,6 +22,8 @@
     <link rel="icon" href="images/icon.png" type="image/gif" />
     <!-- Scrollbar Custom CSS -->
     <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
+    <!-- bootstrap table CSS-->
+    <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.15.3/dist/bootstrap-table.min.css">
     <!-- Tweaks for older IEs-->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -66,7 +68,7 @@
                                     </div>
                                 </li>
                                 <li>
-                                    <a href="chara.html">人员检索</a>
+                                    <a href="chara.html">专家一览</a>
                                 </li>
                                 <li>
                                     <!--虫/鼠害...害信息查询-->
@@ -107,13 +109,44 @@
     <!-- end header inner -->
 </header>
 
-<h1>sasasda</h1>
-
+<div class="Blog-bg">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="Blogheading">
+                    <h3>药剂管理</h3>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<table data-toggle="table">
+    <thead>
+    <tr>
+        <th>Item ID</th>
+        <th>Item Name</th>
+        <th>Item Price</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td>1</td>
+        <td>Item 1</td>
+        <td>$1</td>
+    </tr>
+    <tr>
+        <td>2</td>
+        <td>Item 2</td>
+        <td>$2</td>
+    </tr>
+    </tbody>
+</table>
+<footer>n</footer>
 <div class="cpy">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <p style="color: grey">Copyright © 2020 Design by JMG 20200722 Group 2</p>
+                <p style="color: grey">Copyright ? 2020 Design by JMG 20200722 Group 2</p>
             </div>
         </div>
     </div>
@@ -126,5 +159,6 @@
 <!-- Scrollbar Js Files -->
 <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
 <script src="js/custom.js"></script>
+<script src="https://unpkg.com/bootstrap-table@1.15.3/dist/bootstrap-table.min.js"></script>
 </body>
 </html>
