--- a/src/main/resources/static/html/register.html
+++ b/src/main/resources/static/html/register.html
@@ -22,6 +22,8 @@
     <link rel="icon" href="../images/icon.png" type="image/gif" />
     <!-- Scrollbar Custom CSS -->
     <link rel="stylesheet" href="../css/jquery.mCustomScrollbar.min.css">
+    <script src="../js/jquery.js"></script>
+    <script src="../js/register.js"></script>
     <!-- Tweaks for older IEs-->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -83,11 +85,11 @@
                                     </div>
                                 </li>
                                 <!--登录后隐藏-->
-                                <li id="login" class="active">
+                                <li id="login">
                                     <a href="login.html">登录</a>
                                 </li>
                                 <!--登录后隐藏-->
-                                <li id="register">
+                                <li id="register" class="active">
                                     <a href="register.html">注册</a>
                                 </li>
                                 <!--未登录时隐藏-->
@@ -124,22 +126,25 @@
     <div class="formCenter">
         <div class="mysign">
             <div class="col-lg-12 center">
-                <input type="text" class="form-control" name="username" placeholder="请输入账户名" required autofocus/>
+                <input type="text" class="form-control" id="usrName" name="username" placeholder="请输入账户名" required autofocus/>
             </div>
             <div class="col-lg-12 center">
-                <input type="password" class="form-control" name="password" placeholder="请输入密码" required autofocus/>
+                <input type="password" class="form-control" id="usrPsw" name="password" placeholder="请输入密码" required autofocus/>
+            </div>
+            <div class="col-lg-12 center">
+                <input type="text" class="form-control" id="realname" name="realname" placeholder="请输入真实姓名" required autofocus/>
             </div>
             <div class="col-lg-10">
                 <p><a href="login.html" style="color: #79797a">已有账户？点我登录</a></p>
             </div>
-            </div>
-            <div class="col-lg-10 mycheckbox checkbox">
-            </div>
-            <div class="col-lg-10"></div>
-            <div class="col-lg-10">
-                <button type="button" class="btn btn-success col-lg-12">注册</button>
-            </div>
         </div>
+        <div class="col-lg-10 mycheckbox checkbox">
+        </div>
+        <div class="col-lg-10"></div>
+        <div class="col-lg-10">
+            <button type="button" class="btn btn-success col-lg-12">注册</button>
+        </div>
+    </div>
     </div>
 </form>
 <!-- end section -->
