注册已测通

--- a/src/main/resources/static/html/register.html
+++ b/src/main/resources/static/html/register.html
@@ -132,19 +132,19 @@
                 <input type="password" class="form-control" id="usrPsw" name="password" placeholder="请输入密码" required autofocus/>
             </div>
             <div class="col-lg-12 center">
-                <input type="text" class="form-control" id="realname" name="realname" placeholder="请输入真实姓名" required autofocus/>
+                <input type="text" class="form-control" id="relnam" name="realname" placeholder="请输入真实姓名" required autofocus/>
             </div>
             <div class="col-lg-10">
                 <p><a href="login.html" style="color: #79797a">已有账户？点我登录</a></p>
             </div>
+            </div>
+            <div class="col-lg-10 mycheckbox checkbox">
+            </div>
+            <div class="col-lg-10"></div>
+            <div class="col-lg-10">
+                <button type="button" id="btn3" class="btn btn-success col-lg-12">注册</button>
+            </div>
         </div>
-        <div class="col-lg-10 mycheckbox checkbox">
-        </div>
-        <div class="col-lg-10"></div>
-        <div class="col-lg-10">
-            <button type="button" class="btn btn-success col-lg-12">注册</button>
-        </div>
-    </div>
     </div>
 </form>
 <!-- end section -->
@@ -160,12 +160,9 @@
         </div>
     </div>
 </div>
-<!-- end footer -->
-<!-- Javascript files-->
-<script src="../js/jquery.min.js"></script>
 <script src="../js/popper.min.js"></script>
 <script src="../js/bootstrap.bundle.min.js"></script>
-<script src="../js/jquery-3.0.0.min.js"></script>
+<script src="../js/jquery-3.3.1.min.js"></script>
 <script src="../js/plugin.js"></script>
 <!-- Scrollbar Js Files -->
 <script src="../js/jquery.mCustomScrollbar.concat.min.js"></script>
