修改页面布局和验证用户后的提示

--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -75,13 +75,11 @@
                                     </button>
                                     <div class="dropdown-menu">
                                        <a class="dropdown-item" style="color: black" href="#">区域一览</a>
+                                       <a class="dropdown-item" style="color: black" href="#">专家一览</a>
                                        <a class="dropdown-item" style="color: black" href="#">小班管理</a>
                                        <a class="dropdown-item" style="color: black" href="#">事件记录</a>
                                     </div>
                                  </div>
-                              </li>
-                              <li>
-                                 <a href="chara.html">人员检索</a>
                               </li>
                               <li>
                                  <!--虫/鼠害...害信息查询-->
@@ -131,10 +129,13 @@
                      <!-- The slideshow -->
                      <div class="carousel-inner">
                         <div class="carousel-item active">
-                           <img src="../images/slider_1.png" alt="#" />
+                           <img src="../images/slide_1.png" alt="#" />
                         </div>
                         <div class="carousel-item">
                            <img src="../images/slide_2.jfif" alt="#" />
+                        </div>
+                        <div class="carousel-item">
+                           <img src="../images/slide_3.png" alt="#" />
                         </div>
                      </div>
                      <!-- Left and right controls -->
@@ -187,6 +188,7 @@
       <!-- section -->
 
       <!-- footer -->
+      <footer class="navbar-fixed-bottom">
       <div class="cpy">
          <div class="container">
             <div class="row">
@@ -196,6 +198,7 @@
             </div>
          </div>
       </div>
+      </footer>
       <!-- end footer -->
       <!-- Javascript files-->
       <script src="../js/jquery.min.js"></script>
